@@ -3,7 +3,8 @@
 - background render thread cleans up and quits neatly
 - colourspace has a source_space option
 - operations can be tagged as "deprecated"
-- redo im_draw_circle(), im_draw_flood() as classes
+- redo im_draw_circle(), im_draw_flood(), im_draw_line(), im_draw_mask() as 
+  classes
 - better rounding in vips_flatten()
 
 22/1/14 started 7.38.3
